# sysinfo-web

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md
src/: index.html  lib.rs  main.rs  sysinfo_ext.rs  sysinfo_serde.rs  web.rs
