[package]
name = "sysinfo-web"
description = "Lightweight web based process viewer built on top of sysinfo"
version = "0.1.0-pre3"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/onur/sysinfo-web"
documentation = "https://docs.rs/sysinfo-web"

[dependencies]
serde = "0.9"
serde_json = "0.9"
iron = "0.5"
hostname = "0.1"
sysinfo = "^0.3"

[dev-dependencies]
serde_derive = "0.9"

[[bin]]
name = "sysinfo-web"
test = false
doc = false
